--- a/11millioncrafts/frontend/src/index.css
+++ b/11millioncrafts/frontend/src/index.css
@@ -1,11 +1,15 @@
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  /* background: linear-gradient(135deg, #ff9a9e, #fad0c4); */
+  background-image: url("https://images.unsplash.com/photo-1513201099705-a9746e1e201f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z2lmdHxlbnwwfHwwfHx8MA%3D%3D");
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 .landing-page {
@@ -71,4 +75,28 @@ form button:hover {
 }
 .home-button button:hover{
   background: #e55a4f;
+}
+
+/* Success message styling */
+.success-message {
+  color: green;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+}
+
+/* Error message styling */
+.error-message {
+  color: red;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+}
+.form-container select{
+  background-color: rgb(1, 145, 255);
+  color: white;
+  padding:10px;
+  border: none;
+  border-radius: 5px;
+  margin: 0 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
 }
